--- a/style.css
+++ b/style.css
@@ -3,15 +3,15 @@ MAIN ELEMENTS
 ******************************************************/
 
 body {
-    background: lightgrey;
+    background: blue;
 }
 
 div{
-    font-family: Baskerville, "Hoefler Text", Garamond, "Times New Roman", serif; 
+    font-family: Helvetica, "Hoefler Text", Garamond, "Times New Roman", serif; 
 }
 
 section{
-    height: 50%;
+    height: 40%;
 }
 
 /******************************************************
@@ -19,16 +19,16 @@ FIRST SECTION
 ******************************************************/
 
 .ttp-logo{
-        width: 300px;
-        height: 100px;
+        width: 350px;
+        height: 120px;
         display: none;
 		position:relative
 }
 
 #redbox, .CSS3Box, .CSS3TransformBox{
-	width:80px;
-	height:80px;
-	background-color:red;
+	width:85px;
+	height:85px;
+	background-color:green;
 	position:relative
 }
 
@@ -38,11 +38,11 @@ display: none
 
 .items{
 float: left;
-width: 200px;
+width: 250px;
 }
 
 .together{
-    padding: 10px 0px 10px 0px;
+    padding: 12px 0px 10px 0px;
     clear: left=
 }
 
@@ -73,8 +73,8 @@ VIDEO
 ******************************************************/
 
 .video {
-    height: 400px;
-    width: 800px;
+    height: 500px;
+    width: 750px;
     display:none;
 }
 
